# agent

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_RESTRUCTURE.md  SETUP_GUIDE.md  build.sh  docker-compose.dev.yml  docker-compose.yml  env.example  index.html  requirements.txt  start.bat  tailwind.config.ts  test_agent.py  uvicorn.bat
backend/: CLEANUP_CHECKLIST.md  POST_CLEANUP_REPORT.md  README.md  agent_factory.py  agents.yaml  check_migration.py  cleanup_migration.py  main.py  pyproject.toml  requirements.txt  run.py  start_dev.py
backend/agent/: __init__.py  agent.py
backend/agent/policies/: __init__.py
backend/agent/prompts/: fortune_general_prompt.txt
backend/agent/tools/: __init__.py  deep_research.py  local_kb.py  lunar_chart.py  pandas_kb.py  weather.py
backend/app/: __init__.py  deps.py  main.py
backend/app/api/: __init__.py  agent_factory.py  graph_routes.py  intent_router.py
backend/app/core/: settings.py
backend/configs/: agents.yaml
backend/graph/: __init__.py  builder.py  state.py
backend/graph/nodes/: __init__.py  (+8 more)
backend/infra/: __init__.py
backend/prompts/: financial_prompt.txt  fortune_prompt.txt  general_prompt.txt
backend/rag/: __init__.py  systems.py
backend/requirements/: agent.txt  api.txt  base.txt  cache.txt  database.txt  dev.txt  eval.txt  graph.txt
backend/scripts/: check_dashscope.py  check_db_connection.py  init_pgvector.sql  migrate_chroma_to_pg.py  run_ragas_eval.py
backend/tests/: __init__.py  conftest.py
backend/workers/: __init__.py  ingest_documents.py  ingest_fortune.py
(+75 files in other folders)
